force-app/main/default/objects/custom_create46__c/custom_create46__c.object-meta.xml
<CustomObject>
    <label>Custom created object46</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects46</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>