force-app/main/default/objects/custom_create46__c/fields/custom_create_46field592__c.field-meta.xml
<CustomField>
    <fullName>custom_create_46field592__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 46field592</label>
    <type>Checkbox</type>
</CustomField>